02-modules/0x-weaviate/12-weaviate/weaviate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weaviate-ingress
  namespace: weaviate
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - weaviate.domainname.com
      secretName: certificate-secret
  rules:
  - host: weaviate.domainname.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: weaviate
              port:
                number: 80
